# openmc_geometry_plot

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_with_install.yml
examples/: color_spheres.py  color_spheres_with_legend.py  csg_cylinder_box.py  csg_inf_cylinder.py  csg_spheres_colored_by_material.py  csg_spheres_colored_by_material_and_cell.py  csg_spheres_colored_by_material_with_legend.py  csg_tokamak.py  cylinder_box.py  dagmc_180_degree.py  dagmc_180_degree_tokamak.py  dagmc_180_tokamak.h5m  inf_cylinder.py  overlap.py  tokamak.py
examples/csg_cylinder_box/: geometry.xml  plot.py
examples/csg_infinite_cylinder/: geometry.xml  plot.py
examples/csg_spheres_colored_by_material/: geometry.xml  plot.py
examples/csg_spheres_colored_by_material_and_cell/: geometry.xml  plot.py
examples/csg_spheres_colored_by_material_with_legend/: plot.py
examples/csg_tokamak/: geometry.xml  plot.py
examples/dagmc_tokamak/: geometry.xml  plot.py
src/openmc_geometry_plot/: He4.h5  __init__.py  app.py  core.py  cross_sections.xml  launch.py
tests/: test_dagmc_slice.py  test_get_slice_of_cell.py  test_get_slice_of_material.py  two_disconnected_cubes.h5m
