[build-system]
requires = ["setuptools >= 65.4.0", "setuptools_scm[toml]>=7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "openmc_geometry_plot"
authors = [
  { name="Jonathan Shimwell", email="mail@jshimwell.com" },
]
license = {file = "LICENSE.txt"}
description = "Plot OpenMC geometry, interactive or static 2D slice plots."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["openmc", "geometry", "plot", "slice"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.1",
    "matplotlib",
    "plotly",
]
dynamic = ["version"]


[tool.setuptools_scm]
write_to = "src/openmc_geometry_plot/_version.py"


[project.optional-dependencies]
tests = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/fusion-energy/openmc_geometry_plot"
"Bug Tracker" = "https://github.com/fusion-energy/openmc_geometry_plot/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
openmc_geometry_plot = "openmc_geometry_plot.launch:main"
